--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- In collaboration of Mandar Pillewan and Uttank -->
+<!-- Collaborative work of Mandar Pillewan and Uttank -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,4 +75,5 @@
 </body>
 
 </html>
+
 
