--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div class="header">
       <h1>National Conference on Future Innovation Engineering & Technology</h1>
       <h1>(NFIET-2025)</h1>
-      <h3>14<sup>th</sup> & 15<sup>th</sup> November 2025</h3>
+      <h3 style="font-weight: bolder;">4<sup>th</sup> October 2025</h3>
       <div class="date-box">Department of Electronics & Telecommunication, SVPCET Nagpur</div>
     </div>
 
@@ -305,36 +305,63 @@
       <div class="countdown">
         <h3>No. of Participants</h3>
         <div class="time-container">
-          <div class="time-box">120</div>
+          <div class="time-box">93</div>
         </div>
       </div>
     </div>
 
     <a href="#" class="btn">Download Brochure</a>
 
-    <div class="about">
+        <div class="about">
       <h2>About Department</h2>
       <p>
-        The Department of Electronics & Telecommunication Engineering at St. Vincent Pallotti College of Engineering &
-        Technology is committed to imparting quality education, fostering innovation, and developing industry-ready
+        The Department of Electronics & Telecommunication Engineering at St. Vincent Pallotti College of Engineering & 
+        Technology is committed to imparting quality education, fostering innovation, and developing industry-ready 
         professionals.
       </p>
       <p>
-        The department offers a dynamic learning environment enriched with state-of-the-art laboratories, experienced
-        faculty, and a curriculum that bridges theory with practical applications in modern communication and
-        electronics
-        technologies.
+        The department offers a dynamic learning environment enriched with state-of-the-art laboratories, experienced 
+        faculty, and a curriculum that bridges theory with practical applications in modern communication and 
+        electronics technologies.
       </p>
       <p>
-        To encourage technical growth, leadership, and peer collaboration, the department hosts its own student forum
-        Electel, formed under the prestigious Institution of Electronics and Telecommunication Engineers (IETE). Electel
+        To encourage technical growth, leadership, and peer collaboration, the department hosts its own student forum 
+        Electel, formed under the prestigious Institution of Electronics and Telecommunication Engineers (IETE). Electel 
         serves as a vibrant platform for workshops, seminars, competitions, and conferences.
       </p>
       <p>
-        Under the banner of Electel, this conference is being organized to provide a platform for participants to share
+        Under the banner of Electel, this conference is being organized to provide a platform for participants to share 
         innovative ideas, present research work, and engage in meaningful technical discussions.
       </p>
     </div>
+
+    <div class="about">
+      <h2>About SVPCET</h2>
+      <p>
+        St. Vincent Pallotti College of Engineering & Technology, Nagpur, established in 2004 by the Nagpur Pallottine 
+        Society, is a NAAC 'A'-accredited premier institution renowned for academic excellence and strong placements. 
+      </p>
+      <p>
+        Offering UG and PG programs in Computer, Mechanical, Electrical, and allied branches, along with research 
+        degrees, SVPCET combines cutting-edge infrastructure with industry-aligned learning to shape globally competent 
+        engineers.
+      </p>
+    </div>
+
+    <div class="about">
+      <h2>About NFIET</h2>
+      <p>
+        The National Conference for Future Engineers (NFIET), organized by the Department of Electronics & 
+        Telecommunication Engineering under its IETE forum Electel, is a multidisciplinary platform designed for UG and 
+        PG students.
+      </p>
+      <p>
+        The conference encourages participants to present papers and posters while promoting research, innovation, and 
+        technical excellence across diverse engineering domains. It serves as a vibrant platform for sharing knowledge, 
+        exchanging ideas, and fostering collaboration between academia and industry.
+      </p>
+    </div>
+
   </div>
 
   <!-- Scripts -->
@@ -344,7 +371,7 @@
     }
 
     function updateCountdown() {
-      const eventDate = new Date("November 14, 2025 00:00:00").getTime();
+      const eventDate = new Date("October 4, 2025 00:00:00").getTime();
       const now = new Date().getTime();
       const diff = eventDate - now;
 
