--- a/themes.html
+++ b/themes.html
@@ -119,7 +119,13 @@
       text-align: center;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       transition: transform 0.3s ease;
+
+      /* NEW: make uniform height and vertical layout */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
+
 
     .theme-card:hover {
       transform: translateY(-8px);
@@ -152,6 +158,25 @@
       cursor: pointer;
       z-index: 1100;
     }
+
+    .theme-btn {
+      display: inline-block;
+      margin-top: auto;
+      /* pushes it down to the bottom */
+      padding: 10px 18px;
+      background: var(--primary-color);
+      color: white;
+      font-weight: 500;
+      border-radius: 6px;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+
+    .theme-btn:hover {
+      /* background: var(--accent-color); */
+      transform: translateY(-3px);
+    }
+
 
     @media (max-width: 768px) {
       .sidebar {
@@ -204,37 +229,47 @@
     <div class="themes">
       <div class="theme-card">
         <div class="theme-icon">🤖</div>
-        <h3>Artificial Intelligence</h3>
+        <h3>Computer Science & AI</h3>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgHyyTNusTlh933wCH9TPavpVZYPYyNHg7EZfCDTQAz8BYoA/viewform?usp=dialog"
+          target="_blank" class="theme-btn">Submit Paper</a>
       </div>
+
       <div class="theme-card">
-        <div class="theme-icon">🧠</div>
-        <h3>Machine Learning</h3>
+        <div class="theme-icon">🌍</div>
+        <h3>Interdisciplinary</h3>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfALYF8Hpm_rp3fWuAEBHZxyF-28UWkeeNO2CPX2ddR4L4eYg/viewform?usp=dialog"
+          target="_blank" class="theme-btn">Submit Paper</a>
       </div>
+
       <div class="theme-card">
-        <div class="theme-icon">📊</div>
-        <h3>Data Science</h3>
+        <div class="theme-icon">🏗️</div>
+        <h3>Civil Engineering</h3>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdHpMA5uQISVY6x21bsj-yNkMvatJOnF4gZvaEGpZox7lKDRw/viewform?usp=dialog"
+          target="_blank" class="theme-btn">Submit Paper</a>
       </div>
+
       <div class="theme-card">
-        <div class="theme-icon">📡</div>
-        <h3>Electronics & Communication</h3>
+        <div class="theme-icon">⚙️</div>
+        <h3>Mechanical Engineering</h3>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfY6vmQpbzso_WC_BJUxJPdBungxulBLh5fImJ7UvWsmQK8Aw/viewform?usp=dialog"
+          target="_blank" class="theme-btn">Submit Paper</a>
       </div>
-      <div class="theme-card">
-        <div class="theme-icon">🌐</div>
-        <h3>Internet of Things</h3>
-      </div>
-      <div class="theme-card">
-        <div class="theme-icon">🔒</div>
-        <h3>Cybersecurity</h3>
-      </div>
+
       <div class="theme-card">
         <div class="theme-icon">⚡</div>
-        <h3>Power & Energy Systems</h3>
+        <h3>Electrical Engineering</h3>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfb21dug_TWhOMysHAJIcV44cTKuH_ikmlOkMFgHtWXcB8H5w/viewform?usp=dialog"
+          target="_blank" class="theme-btn">Submit Paper</a>
       </div>
+
       <div class="theme-card">
-        <div class="theme-icon">🚀</div>
-        <h3>Robotics & Automation</h3>
+        <div class="theme-icon">📚</div>
+        <h3>Basic Science & Humanities</h3>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdrtIw0v_Jv4ZXhlRLSRYSwHekenGzfux_9kmeipNKTUM4Gbg/viewform?usp=dialog"
+          target="_blank" class="theme-btn">Submit Paper</a>
       </div>
     </div>
+
   </div>
 
   <script>
