--- a/register.html
+++ b/register.html
@@ -233,16 +233,16 @@
       <div class="reg-card">
         <h2>Paper Conference</h2>
         <p>Present your research paper and showcase your innovations.</p>
-        <div class="fee">Fee: ₹1000</div>
-        <a href="#" class="btn">Register</a>
+        <div class="fee">Fee: ₹500</div>
+        <a href="themes.html" class="btn">Register</a>
       </div>
 
       <!-- Poster Presentation -->
       <div class="reg-card">
         <h2>Poster Presentation</h2>
         <p>Share your ideas creatively through posters and discussions.</p>
-        <div class="fee">Fee: ₹500</div>
-        <a href="#" class="btn">Register</a>
+        <div class="fee">Fee: ₹300</div>
+        <a href="themes.html" class="btn">Register</a>
       </div>
     </div>
   </div>
