--- a/contact.html
+++ b/contact.html
@@ -248,12 +248,12 @@
             <div class="info-card">
                 <div class="info-icon"><i class="fas fa-envelope"></i></div>
                 <h3>Email</h3>
-                <p>nfiet2025@svpcet.edu</p>
+                <p>nfiet2025@stvincentngp.edu.in</p>
             </div>
             <div class="info-card">
                 <div class="info-icon"><i class="fas fa-phone"></i></div>
                 <h3>Contact</h3>
-                <p>+91-9876543210<br>+91-9123456780</p>
+                <p>9881123111<br>9322214425</p>
             </div>
         </div>
 
