--- a/register.html
+++ b/register.html
@@ -234,7 +234,7 @@
         <h2>Paper Conference</h2>
         <p>Present your research paper and showcase your innovations.</p>
         <div class="fee">Fee: ₹500</div>
-        <a href="themes.html" class="btn">Register</a>
+        <a href="https://forms.gle/KEjTGyr715kGXrey5" class="btn">Register</a>
       </div>
 
       <!-- Poster Presentation -->
@@ -242,7 +242,7 @@
         <h2>Poster Presentation</h2>
         <p>Share your ideas creatively through posters and discussions.</p>
         <div class="fee">Fee: ₹300</div>
-        <a href="themes.html" class="btn">Register</a>
+        <a href="https://forms.gle/KEjTGyr715kGXrey5" class="btn">Register</a>
       </div>
     </div>
   </div>
@@ -256,3 +256,4 @@
 </body>
 
 </html>
+
