--- a/themes.html
+++ b/themes.html
@@ -210,12 +210,7 @@
     </a>
     <a href="themes.html">Conference Themes</a>
     <a href="timeline.html">Important Dates</a>
-    <a href="#">Speakers</a>
-    <a href="#">Schedule</a>
-    <a href="#">Sponsorship</a>
-    <a href="#">Paper Submission</a>
     <a href="register.html">Registration</a>
-    <a href="#">Accommodation</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -230,42 +225,42 @@
       <div class="theme-card">
         <div class="theme-icon">🤖</div>
         <h3>Computer Science & AI</h3>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgHyyTNusTlh933wCH9TPavpVZYPYyNHg7EZfCDTQAz8BYoA/viewform?usp=dialog"
+        <a href="register.html"
           target="_blank" class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">🌍</div>
         <h3>Interdisciplinary</h3>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfALYF8Hpm_rp3fWuAEBHZxyF-28UWkeeNO2CPX2ddR4L4eYg/viewform?usp=dialog"
+        <a href="register.html"
           target="_blank" class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">🏗️</div>
         <h3>Civil Engineering</h3>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdHpMA5uQISVY6x21bsj-yNkMvatJOnF4gZvaEGpZox7lKDRw/viewform?usp=dialog"
+        <a href="register.html"
           target="_blank" class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">⚙️</div>
         <h3>Mechanical Engineering</h3>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfY6vmQpbzso_WC_BJUxJPdBungxulBLh5fImJ7UvWsmQK8Aw/viewform?usp=dialog"
+        <a href="register.html"
           target="_blank" class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">⚡</div>
         <h3>Electrical Engineering</h3>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfb21dug_TWhOMysHAJIcV44cTKuH_ikmlOkMFgHtWXcB8H5w/viewform?usp=dialog"
+        <a href="register.html"
           target="_blank" class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">📚</div>
         <h3>Basic Science & Humanities</h3>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdrtIw0v_Jv4ZXhlRLSRYSwHekenGzfux_9kmeipNKTUM4Gbg/viewform?usp=dialog"
+        <a href="register.html"
           target="_blank" class="theme-btn">Submit Paper</a>
       </div>
     </div>
