--- a/themes.html
+++ b/themes.html
@@ -226,42 +226,42 @@
         <div class="theme-icon">🤖</div>
         <h3>Computer Science & AI</h3>
         <a href="register.html"
-          target="_blank" class="theme-btn">Submit Paper</a>
+          class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">🌍</div>
         <h3>Interdisciplinary</h3>
         <a href="register.html"
-          target="_blank" class="theme-btn">Submit Paper</a>
+          class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">🏗️</div>
         <h3>Civil Engineering</h3>
         <a href="register.html"
-          target="_blank" class="theme-btn">Submit Paper</a>
+          class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">⚙️</div>
         <h3>Mechanical Engineering</h3>
         <a href="register.html"
-          target="_blank" class="theme-btn">Submit Paper</a>
+          class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">⚡</div>
         <h3>Electrical Engineering</h3>
         <a href="register.html"
-          target="_blank" class="theme-btn">Submit Paper</a>
+          class="theme-btn">Submit Paper</a>
       </div>
 
       <div class="theme-card">
         <div class="theme-icon">📚</div>
         <h3>Basic Science & Humanities</h3>
         <a href="register.html"
-          target="_blank" class="theme-btn">Submit Paper</a>
+          class="theme-btn">Submit Paper</a>
       </div>
     </div>
 
@@ -275,3 +275,4 @@
 </body>
 
 </html>
+
