--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NFIET 2025 - VNIT Nagpur</title>
+  <title>NFIET 2025 - SVPCET Nagpur</title>
   <style>
     /* Reset & Base */
     * {
@@ -401,4 +401,5 @@
 </body>
 
 </html>
+
 
