--- a/timeline.html
+++ b/timeline.html
@@ -300,6 +300,13 @@
           </div>
         </div>
 
+        <div class="timeline-item left">
+          <div class="content">
+            <h2>September 30, 2025</h2>
+            <p>Last Date for Registration</p>
+          </div>
+        </div>
+        
         <div class="timeline-item right last-date">
           <div class="content">
             <h2>October 4, 2025</h2>
@@ -320,5 +327,6 @@
 </body>
 
 </html>
+
 
 
