--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <!-- Participants -->
     </div>
 
-    <a href="#" class="btn">Download Brochure</a>
+    <a href="Brochure.pdf" class="btn">Download Brochure</a>
 
         <div class="about">
       <h2>About Department</h2>
@@ -401,5 +401,6 @@
 </body>
 
 </html>
+
 
 
