--- a/contact.html
+++ b/contact.html
@@ -259,9 +259,9 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div style="text-align:center; margin:30px 0;">
+<!--         <div style="text-align:center; margin:30px 0;">
             <a href="#" class="contact-btn">Fill Contact Form</a>
-        </div>
+        </div> -->
 
         <div class="social">
             <a href="#"><i class="fab fa-facebook"></i></a>
@@ -279,4 +279,5 @@
 </body>
 
 </html>
+
 
