--- a/contact.html
+++ b/contact.html
@@ -225,6 +225,7 @@
     <a href="themes.html">Conference Themes</a>
     <a href="timeline.html">Important Dates</a>
     <a href="register.html">Registration</a>
+    <a href="poster.html">Poster</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -279,5 +280,6 @@
 </body>
 
 </html>
+
 
 
