--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
     <a href="themes.html">Conference Themes</a>
     <a href="timeline.html">Important Dates</a>
     <a href="register.html">Registration</a>
+    <a href="poster.html">Poster</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -396,6 +397,7 @@
 </body>
 
 </html>
+
 
 
 
