--- a/register.html
+++ b/register.html
@@ -213,6 +213,7 @@
     <a href="themes.html">Conference Themes</a>
     <a href="timeline.html">Important Dates</a>
     <a href="register.html">Registration</a>
+    <a href="poster.html">Poster</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -251,5 +252,6 @@
 </body>
 
 </html>
+
 
 
