--- a/themes.html
+++ b/themes.html
@@ -211,6 +211,7 @@
     <a href="themes.html">Conference Themes</a>
     <a href="timeline.html">Important Dates</a>
     <a href="register.html">Registration</a>
+    <a href="poster.html">Poster</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -269,3 +270,4 @@
 </body>
 
 </html>
+
