--- a/timeline.html
+++ b/timeline.html
@@ -261,6 +261,7 @@
     <a href="themes.html">Conference Themes</a>
     <a href="timeline.html">Important Dates</a>
     <a href="register.html">Registration</a>
+    <a href="poster.html">Poster</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -326,3 +327,4 @@
 </body>
 
 </html>
+
