--- a/timeline.html
+++ b/timeline.html
@@ -517,6 +517,19 @@
                 </span>
                 <span>Contact</span>
             </a>
+
+            <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
+                <span>
+                    <div class="tab" style="background-color: transparent;">
+                        <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M3.78552 9.5 12.7855 14l9-4.5-9-4.5-8.99998 4.5Zm0 0V17m3-6v6.2222c0 .3483 2 1.7778 5.99998 1.7778 4 0 6-1.3738 6-1.7778V11" />
+                        </svg>
+                    </div>
+                </span>
+                <span>Committee</span>
+            </a>
         </nav>
 
         <div class="sidebar-footer">
@@ -614,5 +627,6 @@
         });
     </script>
 </body>
+
 
 </html>
