--- a/members.html
+++ b/members.html
@@ -62,6 +62,7 @@
                 opacity: 0;
                 transform: translateY(20px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -69,9 +70,12 @@
         }
 
         @keyframes float {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translateY(0px);
             }
+
             50% {
                 transform: translateY(-10px);
             }
@@ -647,7 +651,8 @@
                 <span>
                     <div class="tab" style="background-color: transparent;">
                         <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none"
+                            viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M3.78552 9.5 12.7855 14l9-4.5-9-4.5-8.99998 4.5Zm0 0V17m3-6v6.2222c0 .3483 2 1.7778 5.99998 1.7778 4 0 6-1.3738 6-1.7778V11" />
                         </svg>
@@ -695,7 +700,8 @@
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75" />
                             </svg>
                         </div>
-                        <h2 style="font-size: 32px; font-weight: bold; color: hsl(var(--foreground));">Meet Our Team</h2>
+                        <h2 style="font-size: 32px; font-weight: bold; color: hsl(var(--foreground));">Meet Our Team
+                        </h2>
                     </div>
                     <p class="text-muted leading-relaxed" style="font-size: 18px;">
                         The success of NFIET-2025 is made possible by the dedicated efforts of our organizing committee.
@@ -714,12 +720,39 @@
                 <div class="grid grid-1">
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&h=300&fit=crop&crop=face"
-                                alt="Dr. Rajesh Kumar Sharma" />
+                            <img src="https://www.stvincentngp.edu.in/img/director_paul_chandrankunnel.jpg"
+                                alt="Fr. Dr. Paul Chandrankunnel" />
                         </div>
-                        <h3 class="member-name">Dr. Rajesh Kumar Sharma</h3>
+                        <h3 class="member-name">Fr. Dr. Paul Chandrankunnel</h3>
                         <p class="member-role">Patron</p>
-                        <p class="member-designation">Principal, SVPCET Nagpur</p>
+                        <p class="member-designation">(Director, SVPCET)</p>
+                    </div>
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://stvincentngp.edu.in/img/uploads/img_1742201446.jpg"
+                                alt="Dr. Vijay M. Wadhai" />
+                        </div>
+                        <h3 class="member-name">Dr. Vijay M. Wadhai</h3>
+                        <p class="member-role">Patron</p>
+                        <p class="member-designation">(Principal, SVPCET)</p>
+                    </div>
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/rajendra_1633585959.jpg"
+                                alt="Prof. R.B. Gowardhan" />
+                        </div>
+                        <h3 class="member-name">Prof. R.B. Gowardhan</h3>
+                        <p class="member-role">Patron</p>
+                        <p class="member-designation">(Institute Mentor)</p>
+                    </div>
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&h=300&fit=crop&crop=face"
+                                alt="Dr. Prashant Maheshwari" />
+                        </div>
+                        <h3 class="member-name">Dr. Prashant Maheshwari</h3>
+                        <p class="member-role">Patron</p>
+                        <p class="member-designation">(Director, QM&ID)</p>
                     </div>
                 </div>
             </section>
@@ -728,26 +761,27 @@
             <section class="section">
                 <div class="section-header text-center">
                     <h2 class="section-title">Conveners</h2>
-                    <p class="section-description">Leading the conference organization and ensuring academic excellence</p>
+                    <p class="section-description">Leading the conference organization and ensuring academic excellence
+                    </p>
                 </div>
                 <div class="grid grid-2 grid-md-2">
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1494790108755-2616c0763c55?w=300&h=300&fit=crop&crop=face"
-                                alt="Dr. Priya Mehta" />
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/%20harish_1739332171.jpg"
+                                alt="Dr. Harish Rajurkar" />
                         </div>
-                        <h3 class="member-name">Dr. Priya Mehta</h3>
+                        <h3 class="member-name">Dr. Harish Rajurkar</h3>
                         <p class="member-role">Conference Convener</p>
-                        <p class="member-designation">Head of Department, E&TC</p>
+                        <p class="member-designation">(Head of Department)</p>
                     </div>
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300&h=300&fit=crop&crop=face"
-                                alt="Dr. Amit Singh" />
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/deepali_1739332164.jpg"
+                                alt="Dr. Deepali Borakhade" />
                         </div>
-                        <h3 class="member-name">Dr. Amit Singh</h3>
+                        <h3 class="member-name">Dr. Deepali Borakhade</h3>
                         <p class="member-role">Co-Convener</p>
-                        <p class="member-designation">Professor, E&TC Department</p>
+                        <p class="member-designation"> (Faculty Coordinator, IETE)</p>
                     </div>
                 </div>
             </section>
@@ -761,40 +795,92 @@
                 <div class="grid grid-responsive grid-md-4">
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=300&h=300&fit=crop&crop=face"
-                                alt="Dr. Sneha Patel" />
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/ashutosh_1739332030.jpg"
+                                alt="Dr. Ashutosh Werulkar" />
                         </div>
-                        <h3 class="member-name">Dr. Sneha Patel</h3>
-                        <p class="member-role">Technical Chair</p>
-                        <p class="member-designation">Assistant Professor, E&TC</p>
+                        <h3 class="member-name">Dr. Ashutosh Werulkar</h3>
                     </div>
+
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=300&h=300&fit=crop&crop=face"
-                                alt="Dr. Vikram Gupta" />
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/manish_1739332205.jpg"
+                                alt="Dr. Manish Kapse" />
                         </div>
-                        <h3 class="member-name">Dr. Vikram Gupta</h3>
-                        <p class="member-role">Program Chair</p>
-                        <p class="member-designation">Associate Professor, E&TC</p>
+                        <h3 class="member-name">Dr. Manish Kapse</h3>
                     </div>
+
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?w=300&h=300&fit=crop&crop=face"
-                                alt="Prof. Anita Rao" />
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/avinash_1739332118.jpg"
+                                alt="Prof. Avinash Lambat" />
                         </div>
-                        <h3 class="member-name">Prof. Anita Rao</h3>
-                        <p class="member-role">Registration Chair</p>
-                        <p class="member-designation">Assistant Professor, E&TC</p>
+                        <h3 class="member-name">Prof. Avinash Lambat</h3>
                     </div>
+
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=300&h=300&fit=crop&crop=face"
-                                alt="Prof. Manoj Joshi" />
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/ravindra_1739332276.jpg"
+                                alt="Prof. Ravinddra Deshmukh" />
                         </div>
-                        <h3 class="member-name">Prof. Manoj Joshi</h3>
-                        <p class="member-role">Publication Chair</p>
-                        <p class="member-designation">Assistant Professor, E&TC</p>
+                        <h3 class="member-name">Prof. Ravinddra Deshmukh</h3>
                     </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/kirti_1739332150.jpg"
+                                alt="Dr. Kirti Vaidya" />
+                        </div>
+                        <h3 class="member-name">Dr. Kirti Vaidya</h3>
+                    </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/mrunalini_1739332188.jpg"
+                                alt="Prof. Mrunalini Buradkar" />
+                        </div>
+                        <h3 class="member-name">Prof. Mrunalini Buradkar</h3>
+                    </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/madhura_1739332354.jpg"
+                                alt="Dr. Madhura Kulkarni" />
+                        </div>
+                        <h3 class="member-name">Dr. Madhura Kulkarni</h3>
+                    </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/dakshada_1739332286.jpg"
+                                alt="Prof. Dakshata Gharode" />
+                        </div>
+                        <h3 class="member-name">Prof. Dakshata Gharode</h3>
+                    </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/hema%20_1633585115.jpg"
+                                alt="Dr. Hema Kale" />
+                        </div>
+                        <h3 class="member-name">Dr. Hema Kale</h3>
+                    </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/nishat_1739332296.jpg"
+                                alt="Prof. Nishat Faizee" />
+                        </div>
+                        <h3 class="member-name">Prof. Nishat Faizee</h3>
+                    </div>
+
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="https://www.stvincentngp.edu.in/img/faculty/shiju_1739332441.jpg"
+                                alt="Dr. Shiju Samuel" />
+                        </div>
+                        <h3 class="member-name">Dr. Shiju Samuel</h3>
+                    </div>
+
                 </div>
             </section>
 
@@ -802,44 +888,41 @@
             <section class="section">
                 <div class="section-header text-center">
                     <h2 class="section-title">Student Members</h2>
-                    <p class="section-description">Energetic student volunteers making the conference a memorable experience</p>
+                    <p class="section-description">Energetic student volunteers making the conference a memorable
+                        experience</p>
                 </div>
                 <div class="grid grid-responsive grid-md-4">
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1507591064344-4c6ce005b128?w=300&h=300&fit=crop&crop=face"
-                                alt="Arjun Sharma" />
+                            <img src="president.jpg"
+                                alt="Siddhart Borkar" />
                         </div>
-                        <h3 class="member-name">Arjun Sharma</h3>
+                        <h3 class="member-name">Siddhart Borkar</h3>
+                        <p class="member-role">President</p>
+                    </div>
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="vice_president.webp"
+                                alt="Atharva Zade" />
+                        </div>
+                        <h3 class="member-name">Atharva Zade</h3>
+                        <p class="member-role">Vice President</p>
+                    </div>
+                    <div class="ocean-card member-card animate-fade-up">
+                        <div class="member-image">
+                            <img src="student_coordinator.jpg"
+                                alt="Chaitanya Parmar" />
+                        </div>
+                        <h3 class="member-name">Chaitanya Parmar</h3>
                         <p class="member-role">Student Coordinator</p>
-                        <p class="member-designation">Final Year B.Tech E&TC</p>
                     </div>
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=300&h=300&fit=crop&crop=face"
-                                alt="Kavya Nair" />
+                            <img src="student_coordinator.jpg"
+                                alt="Safal Jagtap" />
                         </div>
-                        <h3 class="member-name">Kavya Nair</h3>
-                        <p class="member-role">Student Secretary</p>
-                        <p class="member-designation">Final Year B.Tech E&TC</p>
-                    </div>
-                    <div class="ocean-card member-card animate-fade-up">
-                        <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=300&h=300&fit=crop&crop=face"
-                                alt="Rohit Verma" />
-                        </div>
-                        <h3 class="member-name">Rohit Verma</h3>
-                        <p class="member-role">Technical Coordinator</p>
-                        <p class="member-designation">Final Year B.Tech E&TC</p>
-                    </div>
-                    <div class="ocean-card member-card animate-fade-up">
-                        <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?w=300&h=300&fit=crop&crop=face"
-                                alt="Priya Singh" />
-                        </div>
-                        <h3 class="member-name">Priya Singh</h3>
-                        <p class="member-role">Event Coordinator</p>
-                        <p class="member-designation">Final Year B.Tech E&TC</p>
+                        <h3 class="member-name">Safal Jagtap</h3>
+                        <p class="member-role">Secretary</p>
                     </div>
                 </div>
             </section>
