--- a/members.html
+++ b/members.html
@@ -747,7 +747,7 @@
                     </div>
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&h=300&fit=crop&crop=face"
+                            <img src=""
                                 alt="Dr. Prashant Maheshwari" />
                         </div>
                         <h3 class="member-name">Dr. Prashant Maheshwari</h3>
@@ -1010,3 +1010,4 @@
 </body>
 
 </html>
+
