--- a/members.html
+++ b/members.html
@@ -918,7 +918,7 @@
                     </div>
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src="student_coordinator.jpg"
+                            <img src=""
                                 alt="Safal Jagtap" />
                         </div>
                         <h3 class="member-name">Safal Jagtap</h3>
@@ -1010,4 +1010,5 @@
 </body>
 
 </html>
+
 
