--- a/poster.html
+++ b/poster.html
@@ -546,7 +546,7 @@
 
                     </div>
                 </span>
-                <span>Poster</span>
+                <span>Poster & Format</span>
             </a>
 
             <!-- Registration (people icon) -->
@@ -656,4 +656,5 @@
 </body>
 
 </html>
+
 
