--- a/poster.html
+++ b/poster.html
@@ -546,7 +546,7 @@
 
                     </div>
                 </span>
-                <span>Poster & Format</span>
+                <span>Poster</span>
             </a>
 
             <!-- Registration (people icon) -->
@@ -565,6 +565,19 @@
                 <span>Registration</span>
             </a>
 
+            <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
+                <span>
+                    <div class="tab" style="background-color: transparent;">
+                        <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M3.78552 9.5 12.7855 14l9-4.5-9-4.5-8.99998 4.5Zm0 0V17m3-6v6.2222c0 .3483 2 1.7778 5.99998 1.7778 4 0 6-1.3738 6-1.7778V11" />
+                        </svg>
+                    </div>
+                </span>
+                <span>Committee</span>
+            </a>
+
             <!-- Contact (phone icon) -->
             <a href="contact.html" class="sidebar-link" onclick="closeSidebar()">
                 <span>
@@ -577,19 +590,6 @@
                     </div>
                 </span>
                 <span>Contact</span>
-            </a>
-
-            <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
-                <span>
-                    <div class="tab" style="background-color: transparent;">
-                        <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3.78552 9.5 12.7855 14l9-4.5-9-4.5-8.99998 4.5Zm0 0V17m3-6v6.2222c0 .3483 2 1.7778 5.99998 1.7778 4 0 6-1.3738 6-1.7778V11" />
-                        </svg>
-                    </div>
-                </span>
-                <span>Committee</span>
             </a>
         </nav>
 
@@ -656,5 +656,6 @@
 </body>
 
 </html>
+
 
 
