--- a/timeline.html
+++ b/timeline.html
@@ -504,21 +504,7 @@
                 <span>Registration</span>
             </a>
 
-            <!-- Contact (phone icon) -->
-            <a href="#contact" class="sidebar-link" onclick="closeSidebar()">
-                <span>
-                    <div class="tab" style="background-color: transparent;">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" style="width: 26px; height: 26px;">
-                            <path
-                                d="M22 16.92V21a2 2 0 0 1-2.18 2 19.86 19.86 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.07 12.8 19.86 19.86 0 0 1 0 4.18 2 2 0 0 1 2 2h4.09a2 2 0 0 1 2 1.72c.12.9.37 1.77.72 2.58a2 2 0 0 1-.45 2.11L7 10a16 16 0 0 0 7 7l1.59-1.36a2 2 0 0 1 2.11-.45c.81.35 1.68.6 2.58.72A2 2 0 0 1 22 16.92z" />
-                        </svg>
-                    </div>
-                </span>
-                <span>Contact</span>
-            </a>
-
-            <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
+             <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
                 <span>
                     <div class="tab" style="background-color: transparent;">
                         <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
@@ -529,6 +515,20 @@
                     </div>
                 </span>
                 <span>Committee</span>
+            </a>
+
+            <!-- Contact (phone icon) -->
+            <a href="contact.html" class="sidebar-link" onclick="closeSidebar()">
+                <span>
+                    <div class="tab" style="background-color: transparent;">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" style="width: 26px; height: 26px;">
+                            <path
+                                d="M22 16.92V21a2 2 0 0 1-2.18 2 19.86 19.86 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.07 12.8 19.86 19.86 0 0 1 0 4.18 2 2 0 0 1 2 2h4.09a2 2 0 0 1 2 1.72c.12.9.37 1.77.72 2.58a2 2 0 0 1-.45 2.11L7 10a16 16 0 0 0 7 7l1.59-1.36a2 2 0 0 1 2.11-.45c.81.35 1.68.6 2.58.72A2 2 0 0 1 22 16.92z" />
+                        </svg>
+                    </div>
+                </span>
+                <span>Contact</span>
             </a>
         </nav>
 
@@ -630,3 +630,4 @@
 
 
 </html>
+
