--- a/members.html
+++ b/members.html
@@ -747,7 +747,7 @@
                     </div>
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
-                            <img src=""
+                            <img src="dr_pm.jpg"
                                 alt="Dr. Prashant Maheshwari" />
                         </div>
                         <h3 class="member-name">Dr. Prashant Maheshwari</h3>
@@ -1010,6 +1010,7 @@
 </body>
 
 </html>
+
 
 
 
